@@ -525,7 +525,7 @@ show_multiselect_window(struct frontend *obj, struct question *q, int show_ext_d
         return DC_NOTOK;
 
     if (obj->methods.can_align(obj, q)) {
-        stralign(choices_trans, count, "\t");
+        stralign(choices_trans, count);
     }
 
     defvals = malloc(sizeof(char *) * count);
@@ -685,7 +685,7 @@ show_select_window(struct frontend *obj, struct question *q, int show_ext_desc)
         return DC_NOTOK;
 
     if (obj->methods.can_align(obj, q)) {
-        stralign(choices_trans, count, "\t");
+        stralign(choices_trans, count);
     }
 
     sel_height = count;
@@ -1162,9 +1162,14 @@ newt_can_align(struct frontend *obj, struct question *q)
 static const char *
 newt_lookup_directive(struct frontend *obj, const char *directive)
 {
-    if (obj->methods.can_align(obj, obj->questions) &&
-        strcmp("TAB", directive) == 0) {
-        return "\t";
+    if (obj->methods.can_align(obj, obj->questions)) {
+        if (strcmp("TAB", directive) == 0) {
+            return STRALIGN_TAB;
+        } else if (strcmp("ALIGN=CENTER", directive) == 0) {
+            return STRALIGN_ALIGN_CENTER;
+        } else if (strcmp("ALIGN=RIGHT", directive) == 0) {
+            return STRALIGN_ALIGN_RIGHT;
+        }
     }
     /* Remove unhandled directives */
     return "";
