@@ -9,6 +9,18 @@ db_fset test-align/select seen false
 db_input critical test-align/select
 db_go
 
+db_fset test-align/select-center-right-column seen false
+db_input critical test-align/select-center-right-column
+db_go
+
+db_fset test-align/select-center-right-columns seen false
+db_input critical test-align/select-center-right-columns
+db_go
+
+db_fset test-align/select-center-right-full seen false
+db_input critical test-align/select-center-right-full
+db_go
+
 db_fset test-align/select-generated seen false
 db_subst test-align/select-generated CHOICES 'one${!TAB}two, three${!TAB}four, five'
 db_input critical test-align/select-generated
@@ -21,6 +33,12 @@ db_get test-align/choose_partition && echo "Selected: $RET"
 
 db_fset test-align/multiselect seen false
 db_input critical test-align/multiselect
+db_go
+
+db_set debconf/language en
+
+db_fset test-align/languagelist seen false
+db_input critical test-align/languagelist
 db_go
 
 exit 0
