@@ -10,6 +10,10 @@ cdebconf (0.133) UNRELEASED; urgency=low
     RTL scripts.  (Closes: #409412)
   * Fix a segfault happening when GOBACK is selected after adding a new
     question to the set previously seen.  (Closes: #407577)
+  * Add support for center and right alignment of select and multiselect
+    options in the text, newt and GTK+ frontend.  They can respectively be
+    achieved by prefixing a column with ${!ALIGN=CENTER} and ${!ALIGN=RIGHT},
+    respectively.
 
  -- Frans Pop <fjp@debian.org>  Fri, 18 Jul 2008 08:03:07 +0200
 
